# constraints-extras

./: .travis.yml  CONTRIBUTING.md  ChangeLog.md  LICENSE  README.md  cabal.project  constraints-extras.cabal  nixpkgs.nix  release.nix  shell.nix
.github/workflows/: haskell.yml
constraints-extras/: README.md  constraints-extras.cabal
constraints-extras/src/Data/Constraint/: Extras.hs  Flip.hs
constraints-extras/src/Data/Constraint/Extras/: TH.hs
gadt-generics/: LICENSE  README.md  gadt-generics.cabal
gadt-generics/src/Data/GADT/: Generics.hs
gadt-generics/src/Data/GADT/Generics/: TH.hs
src/Data/Constraint/: Compose.hs  Extras.hs  Flip.hs
src/Data/Constraint/Extras/: TH.hs
src/Data/Dependent/Map/: Total.hs
test/: Foo.hs
test/th/: Large.hs  Main.hs
