name: gadt-generics
version: 0.0.0.0
synopsis: Utility package for constraints
description: Convenience functions and TH for working with constraints. See <https://github.com/obsidiansystems/constraints-extras/blob/develop/README.md README.md> for example usage.
category: Constraints
license: BSD3
license-file: LICENSE
author: Cale Gibbard, Ali Abrar
maintainer: maintainer@obsidian.systems
copyright: Obsidian Systems LLC
build-type: Simple
cabal-version: >=2.0
extra-source-files: README.md

library
  exposed-modules: Data.GADT.Generics
                 , Data.GADT.Generics.TH
  other-extensions: LambdaCase
                  , MultiParamTypeClasses
                  , QuasiQuotes
                  , TypeFamilies
                  , TypeOperators
                  , ConstraintKinds
                  , TemplateHaskell
  build-depends: base >=4.9 && <4.12
               , lens
               , template-haskell >=2.11 && <2.14
  hs-source-dirs:  src
  default-language: Haskell2010

test-suite readme
  if impl(ghcjs)
    buildable: False
  type: exitcode-stdio-1.0
  build-depends: base >=4.9 && <4.12
               , gadt-generics
  main-is: README.lhs
  ghc-options: -pgmL markdown-unlit -Wall
  default-language: Haskell2010
  build-tool-depends: markdown-unlit:markdown-unlit

source-repository head
  type:     git
  location: git://github.com/obsidiansystems/constraints-extras.git
